Field Hunt/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>GL_Account_Accounts_Receivable__c</fullName>
        <description>Constant used in Great Plains Export</description>
        <formula>&quot;000-1145&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Constant used in Great Plains Export</inlineHelpText>
        <label>GL Account - Accounts Receivable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hub_Group_Memberships__c</fullName>
        <description>Shows a list of group memberships from the Hub. Do not edit. Controlled by Declarative Rollup Helper.</description>
        <inlineHelpText>Shows a list of group memberships from the Hub. Do not edit. Controlled by Declarative Rollup Helper.</inlineHelpText>
        <label>Hub Group Memberships</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Is_Current_Member__c</fullName>
        <description>If the Account Membership Status for the associated contact is Current, checkbox is checked.</description>
        <formula>IF(Contact.gf_sf__Account_Membership_Status__c = &quot;Current&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the Account Membership Status for the associated contact is Current, checkbox is checked.</inlineHelpText>
        <label>Is Current Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_ID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID_Matches_Contact_Email_Address__c</fullName>
        <formula>Username =  Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User ID Matches Contact Email Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Membership_Status__c</fullName>
        <formula>Contact.gf_sf__Account_Membership_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Membership Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zero__c</fullName>
        <description>Formula field that holds a zero. Used in Great Plains exports to denote one half of a general ledger entry.</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that holds a zero. Used in Great Plains exports to denote one half of a general ledger entry.</inlineHelpText>
        <label>Zero</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gf_sf__Email_to_Engagement_Authorized_Email__c</fullName>
        <inlineHelpText>This field is used by the Email-to-Engagement feature to recognize this user as the Sender</inlineHelpText>
        <label>Email-to-Engagement Authorized Email</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>